#VERSION 0.9.6#

 - added method renderArray() to Peak_View_Render. This new method we use method render() for each files.
 - added a new exception constant ERR_VIEW_FILE_NOT_FOUND to Peak_View_Exception
 - changed the default path used by method render() in Peak_View_Render_Layouts. This path now point to apppath "theme" instead
   of apppath "theme_layouts". This will imply some changes in existing apps, but it will be more flexible and simpler to 
   include files contents of application related to views.
 - modified Peak_Core::initConfig() to support json config file.
 - added property $_allow_comments to class Peak_Config_Json. This option is set to false by default. If true, json file can
   have comment(s) syntax like /* */ and //. Modified methods __construct() and loadString() to support this new property.
 - fixed bug in login() of Peak_Model_Authentication when hashing and salting the password. We use hashStr() now instead.
 - added method hashStr() to class Peak_Model_Authentication
 - added method _filter_phone() to class Peak_Filters_Advanced
 - added the class alias "Peak" to class "Peak_Core" if PHP >= 5.3
 - removed old functions _clean() and _cleans() from Core.php file
 - removed deprecated property $_extensions and methods __call() and ext() from class Peak_Core
 - fixed a problem with default controller action name. We moved default action name verification to getRoute() and simplified method 
   dispatchAction() in class Peak_Controller_Action
 - modified Peak_View_Helper_Debugbar and debugbar.js to correctly start the bar minimized when debugbar.js need to load jquery cdn
 - renamed class View_Helper_assets to Peak_View_Helper_assets as it should have been.
 - fixed an uncaught exception throw in getFromMethod() of Peak_Annotations when method don't exists
 - fixed params parsing problem with Peak_Annotations::parse() when param contains "-" char